--- a/dashboard (panel de control)/forms-switchery.html
+++ b/dashboard (panel de control)/forms-switchery.html
@@ -489,7 +489,7 @@
                     <!--Brand logo & name-->
                     <!--================================-->
                     <div class="navbar-header">
-                        <a href="index.html" class="navbar-brand">
+                        <a href="../index.html" class="navbar-brand">
                             <i class="fa fa-forumbee brand-icon"></i>
                             <div class="brand-title">
                                 <span class="brand-text">WOW</span>
@@ -508,7 +508,7 @@
                                         <!--Category name-->
                                         <li class="list-header">Navigation</li>
                                         <!--Menu list item-->
-                                        <li> <a href="index.html"> <i class="fa fa-home"></i> <span class="menu-title"> Dashboard </span> </a> </li>
+                                        <li> <a href="../index.html"> <i class="fa fa-home"></i> <span class="menu-title"> Dashboard </span> </a> </li>
                                         <!--Category name-->
                                         <li class="list-header">Components</li>
                                         <!--Menu list item-->
