--- a/dashboard (panel de control)/pages-500.html
+++ b/dashboard (panel de control)/pages-500.html
@@ -45,7 +45,7 @@
                                 <br> It looks as though we've broken something on our system.
                                 <br> Don't panic, we are fixing it! Please come back in a while.
                                 <br>
-                                <a href="index.html" class="btn btn-danger btn-return"> <i class="fa fa-home"> </i> Back to Homepage </a>
+                                <a href="../index.html" class="btn btn-danger btn-return"> <i class="fa fa-home"> </i> Back to Homepage </a>
                             </p>
                         </div>
                     </div>
