--- a/dashboard (panel de control)/pages-password-reminder.html
+++ b/dashboard (panel de control)/pages-password-reminder.html
@@ -40,7 +40,7 @@
                     <h4> Hello Stevan </h4>
                     <p class="text-center">Please login to Access your Account</p>
                     <div class="row">
-                        <form action="index.html" class="form-inline">
+                        <form action="../index.html" class="form-inline">
                             <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                 <div class="text-left">
                                     <label for="signupInputPassword" class="text-muted">Password</label>
