--- a/dashboard (panel de control)/plugins/data-tables/images/sort_asc_disabled.html
+++ b/dashboard (panel de control)/plugins/data-tables/images/sort_asc_disabled.html
@@ -44,11 +44,11 @@
 
         <!--logo and iconic logo start-->
         <div class="logo">
-            <a href="index.html"><img src="images/logo.html" alt=""></a>
+            <a href="../index.html"><img src="images/logo.html" alt=""></a>
         </div>
 
         <div class="logo-icon text-center">
-            <a href="index.html"><img src="images/logo_icon.html" alt=""></a>
+            <a href="../index.html"><img src="images/logo_icon.html" alt=""></a>
         </div>
         <!--logo and iconic logo end-->
 
@@ -74,10 +74,10 @@
 
             <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="menu-list nav-active"><a href="index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a>
+                <li class="menu-list nav-active"><a href="../index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="index_alt.html"> Dashboard 1</a></li>
-                        <li class="active"><a href="index.html"> Dashboard 2</a></li>
+                        <li class="active"><a href="../index.html"> Dashboard 2</a></li>
                     </ul>
                 </li>
 
@@ -193,7 +193,7 @@
             <!--toggle button end-->
 
             <!--search start-->
-            <form class="searchform" action="http://adminex.themebucket.net/../file/js/data-tables/images/index.html" method="post">
+            <form class="searchform" action="http://adminex.themebucket.net/../file/js/data-tables/images/../index.html" method="post">
                 <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
             </form>
             <!--search end-->
