--- a/dashboard (panel de control)/plugins/metismenu/test/event.html
+++ b/dashboard (panel de control)/plugins/metismenu/test/event.html
@@ -32,13 +32,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">metisMenu</a>
+          <a class="navbar-brand" href="../index.html">metisMenu</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Vertical Menu</a></li>
+            <li><a href="../index.html">Vertical Menu</a></li>
             <li><a href="metisFolder.html">Folder View</a></li>
             <li><a href="hover.html">Hover Option For Desktop</a></li>
             <li><a href="zurb.html">Foundation | Zurb</a></li>
