--- a/dashboard (panel de control)/plugins/metismenu/test/mini.html
+++ b/dashboard (panel de control)/plugins/metismenu/test/mini.html
@@ -50,7 +50,7 @@
           <li>
             <a href="#">
               <span class="fa fa-2x fa-envelope"></span>
-              <span class="title">Contact</span>
+              <span class="title">Contactanos</span>
             </a>
           </li>
         </ul>
