--- a/dashboard (panel de control)/plugins/metismenu/test/zurb.html
+++ b/dashboard (panel de control)/plugins/metismenu/test/zurb.html
@@ -15,7 +15,7 @@
     <div class="top-bar-left">
       <ul class="vertical medium-horizontal menu">
         <li class="menu-text">metisMenu</li>
-        <li><a href="index.html">Bootstrap</a></li>
+        <li><a href="../index.html">Bootstrap</a></li>
         <li><a href="metisFolder.html">Folder View</a></li>
         <li><a href="hover.html">Hover Option For Desktop</a></li>
         <li class="active"><a href="zurb.html">Foundation | Zurb</a></li>
