--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 							</li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
+								 aria-expanded="false">Sesion</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="page/login.html">Login</a></li>
-									<li class="nav-item"><a class="nav-link" href="page/tracking.html">Tracking</a></li>
-									<li class="nav-item"><a class="nav-link" href="page/elements.html">Elements</a></li>
+									<li class="nav-item"><a class="nav-link" href="page/login.html">Usuario</a></li>
+									<li class="nav-item"><a class="nav-link" href="page/tracking.html">Empresa</a></li>
+									<li class="nav-item"><a class="nav-link" href="page/elements.html">Administradores</a></li>
 								</ul>
 							</li>
-							<li class="nav-item"><a class="nav-link" href="page/contact.html">Contact</a></li>
+							<li class="nav-item"><a class="nav-link" href="page/contact.html">Contactanos</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="#" class="cart"><span class="ti-bolsa"></span></a></li>
