--- a/landingPages.html
+++ b/landingPages.html
@@ -23,19 +23,35 @@
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="images/favicon.png">
+  <style>
+
+@font-face {
+  font-family: Verlag;
+  src: 
+  url("fonts/futura/");
+}
+body{
+  font-family: Verlag,Verlag,Verlag;
+  opacity: 1;
+}
+.encabezado{
+  font-family: Verlag;
+}
+
+  </style>
 </head>
 <!--/head-->
 
 <body>
 
-  <!--.preloader-->
+  <!--.preloader--> 
   <div class="preloader"> <i class="fa fa-circle-o-notch fa-spin"></i></div>
   <!--/.preloader-->
 
-  <header id="home">
+  <header id="home" style="font-family: Verlag;">
     <div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="item active" style="background-image: url(images/slider/img-3.png)">
+        <div class="item active" style="background-image: url(images/slider/img-3.png);">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Bienvenido a <span>Zuhause</span></h1>
             <p class="animated fadeInRightBig">El mejor lugar para acondicionar su casa</p>
